# backend/models/user_model.py
@@ -9,3 +9,8 @@ class User(db.Model):
     email = db.Column(db.String(255), unique=True, nullable=False)
     password = db.Column(db.String(255), nullable=False)
     workspaces = db.relationship('Workspace', backref='owner', lazy=True)
+
+    # Relationships
+    memberships = db.relationship('WorkspaceMember', back_populates='user', lazy=True, cascade='all, delete-orphan')
+    sent_invitations = db.relationship('Invitation', foreign_keys='Invitation.inviter_id', back_populates='inviter', lazy=True, cascade='all, delete-orphan')
+    received_invitations = db.relationship('Invitation', foreign_keys='Invitation.invitee_id', back_populates='invitee', lazy=True, cascade='all, delete-orphan')
